# zatboard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  tasks.md
src/: auth.rs  config.rs  coordinator.rs  filesystem.rs  lib.rs  memo_decoder.rs  message.rs  user_session.rs  zingo_wrapper.rs
tests/: integration_tests.rs  smoke_install_tests.rs
