[package]
name = "zatboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zatboard"
path = "bin/zatboard.rs"

[[bin]]
name = "zatboard-coordinator" 
path = "bin/coordinator.rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "zatboard"
path = "src/lib.rs"
